--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,8 +1,9 @@
-!!!
+!!! 5
 %html
   %head
     %title Zangetsu
     = stylesheet_link_tag 'application', :media => 'all', :'data-turbolinks-track' => true
     = javascript_include_tag 'application', :'data-turbolinks-track' => true
+    = csrf_meta_tag
   %body
     = yield
